Wrote the CSS for website and changed some HTML

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head> 
     <title>Kiki's Delivery Service</title>
     <link rel="icon" href="img/kiki.jpeg">
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>    
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Hachi+Maru+Pop&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/hero.css">    
 </head>
 <body>
     <!-- header element -->
@@ -17,7 +19,7 @@
         <h2>What's happening in Burma/Myanmar?</h2>
         <p>An illegal military coup took place on Feb 1, in which Daw Suu and the president was detained.</p>
         <img src="img/milktea.jpeg">
-        <p>Milk tea alliance</p>
+        <p class="caption">Milk tea alliance</p>
 
         <!-- Action -->
         <h2>Take Action</h2>
