--- a/index.html
+++ b/index.html
@@ -1,48 +1,86 @@
 <!DOCTYPE html>
 <html>
 <head> 
-    <title>Kiki's Delivery Service</title>
-    <link rel="icon" href="img/kiki.jpeg">
+    <title>Burmma Spring Revolution Resources</title>
+    <link rel="icon" href="img/milk-tea-yellow.png">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Hachi+Maru+Pop&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda&family=Fraunces:wght@600&family=Poppins:wght@200&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bubblegum+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/hero.css">    
 </head>
 <body>
+
+    <!--navigator-->
+    <nav>
+        <ul class="navigation">
+          <li><a href="test.html">home</a></li>
+          <li><a href="test.html">about burma</a></li>
+          <li><a href="https://savemyanmar2021.com/">take action</a></li>
+          <li><a href="https://savemyanmar2021.com/">donate</a></li>
+          <li><a href="https://savemyanmar2021.com/">art commissions</a></li>
+          <li><a href="https://savemyanmar2021.com/">protesting tips</a></li>
+        </ul>
+    </nav>
     <!-- header element -->
     <header>
-        <img src="img/kiki.jpeg">
-        <h1>Kiki's Delivery Service</h1>
+        <img src="img/milk-tea-yellow.png" class="center">
+        <h1>Links</h1>
+        <!--<h1>Resources 4 Spring Revolution</h1> -->
     </header>
 
     <!-- main element -->
     <main>
+        <h1>Check out the resources in the links below!</h1><br><br>
+        <a href="about-burma.html"><img src="img/whats-happening.png"></a>
         <h2>What's happening in Burma/Myanmar?</h2>
         <p>An illegal military coup took place on Feb 1, in which Daw Suu and the president was detained.</p>
-        <img src="img/milktea.jpeg">
-        <p class="caption">Milk tea alliance</p>
+        <!-- <img src="img/milktea.jpeg">
+        <p class="caption">Milk tea alliance</p> -->
 
         <!-- Action -->
-        <h2>Take Action</h2>
+    <div class="action" id="action">
+        <a href="about-burma.html"><img src="img/take-action.png"></a>
         <ul>
             <li>Petitions</li>
             <li>Donations</li>
             <li>Art Commissions for CDM</li>
         </ul>
+    </div>
+
+        <!--Donate-->
+        <a href="about-burma.html"><img src="img/donate.png"></a>
+        <br>
+        <br>
+
+         <!--art commissions-->
+         <a href="about-burma.html"><img src="img/art.png"></a>
+         <br>
+         <br>
+
+          <!--protest tips-->
+          <a href="about-burma.html"><img src="img/protestors.png"></a>
+
 
         <!-- Resources and Cites -->
         <h2>Other Resources</h2>
-        <p>Here are some other helpful websites and good resources to learn more about the situation. Click on the liks below.</p>
+        <p>Here are some other helpful websites and good resources to learn more about the situation. Click on the links below.</p>
         <ul>
             <li><a target="_blank" href="https://savemyanmar2021.com/">Save Myanmar 2020</a></li>
             <li><a target="_blank" href="https://chinleaders.org/">Chin Leaders of Tommorrow </a></li>
             <li><a target="_blank" href="https://www.gm4md.org/">Global Movement 4 Democracy</a></li>
         </ul>
+        <br>
+        <br>
+
+        <!--Quote-->
+        <h1>"Cool Kids Drink Laphet Yay & End Dictatorship"</h1>
 
     </main>
 
     <!-- Footer element -->
     <footer>
-        <p>This site was create by <a target="_blank" href="https://google.com">Gracecloud.</a> &copy; Grace</p>
+        <p>* Burmese milk tea is called Laphet Yay.</p>
+        <p>This website's title is credited to this artwork - <a target="_blank" href="https://google.com">Gracecloud!</a> &copy; laphetyaylinks</p>
 
     </footer>
 
