changed navigation to scroll menu, active link, added new donate p

--- a/index.html
+++ b/index.html
@@ -11,26 +11,40 @@
 <body>
 
     <!--navigator-->
-    <nav>
+    <!--<nav>
+    <div class="scrollmenu">
         <ul class="navigation">
-          <li><a href="test.html">home</a></li>
-          <li><a href="test.html">about burma</a></li>
-          <li><a href="https://savemyanmar2021.com/">take action</a></li>
-          <li><a href="https://savemyanmar2021.com/">donate</a></li>
-          <li><a href="https://savemyanmar2021.com/">art commissions</a></li>
-          <li><a href="https://savemyanmar2021.com/">protesting tips</a></li>
+          <li></li><a class= "activeLink" href="test.html">home</a></li>
+          <li><a class= "inactiveLink" href="test.html">about burma</a></li>
+          <li><a class= "inactiveLink" href="https://savemyanmar2021.com/">take action</a></li>
+          <li><a class= "inactiveLink" href="https://savemyanmar2021.com/">donate</a></li>
+          <li><a class= "inactiveLink" href="https://savemyanmar2021.com/">art commissions</a></li>
+          <li><a class= "inactiveLink" href="https://savemyanmar2021.com/">protesting tips</a></li>
         </ul>
-    </nav>
+    </div>
+    </nav>-->
+
     <!-- header element -->
     <header>
         <img src="img/milk-tea-yellow.png" class="center">
         <h1>Links</h1>
         <!--<h1>Resources 4 Spring Revolution</h1> -->
     </header>
+    <nav>
+    <div class="scrollmenu">
+        <a class= "activeLink" href="index.html">home</a>
+        <a class= "inactiveLink" href="test.html">about burma</a>
+        <a class= "inactiveLink" href="https://savemyanmar2021.com/">take action</a>
+        <a class= "inactiveLink" href="donate.html">donate</a>
+        <a class= "inactiveLink" href="https://savemyanmar2021.com/">art commissions</a>
+        <a class= "inactiveLink" href="https://savemyanmar2021.com/">protesting tips</a>
+    </div>
+    </nav>
+
 
     <!-- main element -->
     <main>
-        <h1>Check out the resources in the links below!</h1><br><br>
+        <h2>Check out the resources in the links below!</h2><br><br>
         <a href="about-burma.html"><img src="img/whats-happening.png"></a>
         <h2>What's happening in Burma/Myanmar?</h2>
         <p>An illegal military coup took place on Feb 1, in which Daw Suu and the president was detained.</p>
@@ -64,11 +78,13 @@
         <!-- Resources and Cites -->
         <h2>Other Resources</h2>
         <p>Here are some other helpful websites and good resources to learn more about the situation. Click on the links below.</p>
+        <div class="links">
         <ul>
             <li><a target="_blank" href="https://savemyanmar2021.com/">Save Myanmar 2020</a></li>
             <li><a target="_blank" href="https://chinleaders.org/">Chin Leaders of Tommorrow </a></li>
             <li><a target="_blank" href="https://www.gm4md.org/">Global Movement 4 Democracy</a></li>
         </ul>
+        </div>
         <br>
         <br>
 
