--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <head> 
     <title>Burmma Spring Revolution Resources</title>
     <link rel="icon" href="img/milk-tea-yellow.png">
