Added more pages, petition and donation links

--- a/art-commissions.html
+++ b/art-commissions.html
@@ -22,8 +22,8 @@
         <a class= "inactiveLink" href="index.html">home</a>
         <a class= "inactiveLink" href="learn.html">learn</a>
         <a class= "inactiveLink" href="action.html">take action</a>
-        <a class= "activeLink" href="donate.html">donate</a>
-        <a class= "inactiveLink" href="art-commissions.html">art commissions</a>
+        <a class= "inactiveLink" href="donate.html">donate</a>
+        <a class= "activeLink" href="art-commissions.html">art commissions</a>
         <a class= "inactiveLink" href="protest.html">protesting tips</a>
         <a class= "inactiveLink" href="resources.html">other resources</a>
     </div>
@@ -32,7 +32,7 @@
     <!-- main element -->
     <main>
         <!--<img src="img/donate.png">-->
-        <h2>Donate to CDM</h2>
+        <h2>Petitions</h2>
         <div id="centered">
         <a target="_blank" href="https://donate.crphmyanmar.org/">CRPH's Official CDM Donation Page</a>
         <br>
