--- a/index.html
+++ b/index.html
@@ -34,18 +34,19 @@
     <nav>
     <div class="scrollmenu">
         <a class= "activeLink" href="index.html">home</a>
-        <a class= "inactiveLink" href="test.html">about burma</a>
-        <a class= "inactiveLink" href="https://savemyanmar2021.com/">take action</a>
+        <a class= "inactiveLink" href="learn.html">learn</a>
+        <a class= "inactiveLink" href="action.html">take action</a>
         <a class= "inactiveLink" href="donate.html">donate</a>
-        <a class= "inactiveLink" href="https://savemyanmar2021.com/">art commissions</a>
-        <a class= "inactiveLink" href="https://savemyanmar2021.com/">protesting tips</a>
+        <a class= "inactiveLink" href="art-commissions.html">art commissions</a>
+        <a class= "inactiveLink" href="protest.html">protesting tips</a>
+        <a class= "inactiveLink" href="resources.html">other resources</a>
     </div>
     </nav>
 
 
     <!-- main element -->
     <main>
-        <h2>Check out the resources in the links below!</h2><br><br>
+        <h2>What's happening in Burma?</h2><br><br>
         <a href="about-burma.html"><img src="img/whats-happening.png"></a>
         <h2>What's happening in Burma/Myanmar?</h2>
         <p>An illegal military coup took place on Feb 1, in which Daw Suu and the president was detained.</p>
