Changed header icon, h1 color, scroll menu colors, added links, poem in home page

--- a/donate.html
+++ b/donate.html
@@ -3,7 +3,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <head> 
         <title>Laphetyay Links</title>
-        <link rel="icon" href="img/milk-tea-yellow.png">
+        <link rel="icon" href="img/new-milk-tea.png">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda&family=Fraunces:wght@600&family=Poppins:wght@200&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Bubblegum+Sans&display=swap" rel="stylesheet">
@@ -12,7 +12,7 @@
     <body>
     <!-- header element -->
     <header>
-        <img src="img/milk-tea-yellow.png" class="center">
+        <img src="img/new-milk-tea.png" class="center">
         <h1>Links</h1>
         <!--<h1>Resources 4 Spring Revolution</h1> -->
     </header>
@@ -20,7 +20,7 @@
     <nav>
     <div class="scrollmenu">
         <a class= "inactiveLink" href="index.html">home</a>
-        <a class= "inactiveLink" href="learn.html">learn</a>
+         <!--<a class= "inactiveLink" href="learn.html">news</a>-->
         <a class= "inactiveLink" href="action.html">take action</a>
         <a class= "activeLink" href="donate.html">donate</a>
         <a class= "inactiveLink" href="art-commissions.html">art commissions</a>
@@ -32,29 +32,50 @@
     <!-- main element -->
     <main>
         <!--<img src="img/donate.png">-->
-        <h2>Donate to CDM</h2>
         <div id="centered">
-        <a target="_blank" href="https://donate.crphmyanmar.org/">CRPH's Official CDM Donation Page</a>
+        <h2>CDM Donations</h2><br>
+        <a target="_blank" href="https://www.instagram.com/p/CM4J7n3F_4g/">Why You Should Donate?(In Japanese)</a>
+        <br>
+        <a target="_blank" href="https://www.instagram.com/p/CMUHFm7hakp/">How Much Money Is Needed to Sustain CDM?</a>
+        <p>International payment</p>
+        <p><a target="_blank" href="https://donate.crphmyanmar.org/">CRPH's Official CDM Donation Page</a> - This is the most reliable/official and most important place to donate to. CRPH, the legitimate government of Burma, needs funding for supporting CDM workers and for building a federal army for the people. These two mechanisms, along with international pressure, are our most vital means of winning this revolution.</p>
         <br>
         <a target="_blank" href="https://www.gofundme.com/f/support-civil-disobedience-movement-in-myanmar?utm_medium=copy_link&utm_source=customer&utm_campaign=p_lico+share-sheet">Myanmar Student Union's CDM GoFundMe </a>
         <br>
-        <a target="_blank" href="https://www.gm4md.org/">Global Movement 4 Democracy</a>
+        <a target="_blank" href="https://www.mutualaidmyanmar.org/cdm-fund">Donate via Mutual Aid Myanmar</a>
+        <br>
+        <a target="_blank" href="https://www.gofundme.com/f/help-myanmar-fight-for-democracy?utm_campaign=p_cp+share-sheet&utm_medium=copy_link_all&utm_source=customer">Fundraiser by</a><a target="_blank" href="https://www.instagram.com/p/CMTikSPl4FQ/">Listen Up Myanmar X The NU Class of Alpha Kappa Psi at Northeastern University</a>
 
-        <h2>Support Independent News and Vital Journalism</h2>
-        <p>Journalists and independent media in Burma are among those who have been targeted by the illegal military terrorist regime. Contributions will help them to continue reporting on-the-ground stories.</p>
+        
+
+        <!--<p>Local payment</p>
+        <a target="_blank" href="https://cdmmyanmar.org/">CDM Myanmar</a>-->
+
+        <h2>Support Independent Media and Vital Journalism</h2>
+        <p>Journalists and independent media in Burma are among those who have been targeted by the illegal military terrorist regime. Contributions will help them continue getting their stories out!</p>
         <a target="_blank" href="https://myanmar-now.org/en/donate">Support Myanmar Now</a>
         <br>
         <a target="_blank" href="https://burma.irrawaddy.com/donate">Support Irrawaddy News</a>
         <br>
-        <a target="_blank" href="https://www.gm4md.org/">Global Movement 4 Democracy</a>
+
+        <h2>More Aid</h2>
+        <p><a target="_blank" href="https://www.gm4md.org/fundraisers/">Global Movement 4 Democracy: Fundraisers</a> - Check out their comprehensive list!</p>
+        <a target="_blank" href="https://www.isupportmyanmar.com/">isupportmyanmar - Donation Links</a>
+        <br>
+        <a target="_blank" href="https://actionnetwork.org/fundraising/emergency-challenge-fund-for-a-new-myanmar">International Campaign for the Rohingya</a>
+        <br>
+        <a target="_blank" href="https://www.facebook.com/groups/yangonconnection/permalink/1849367731877694/">Support IDPs & Orphanages</a>
+        <br>
+        <a target="_blank" href="https://www.gofundme.com/f/buy-protective-gear-for-protestors-in-myanmar?utm_source=facebook&utm_medium=social&utm_campaign=p_cp%20share-sheet&fbclid=IwAR0MaoE0maLkGeDY9qA637Ad5USwxLyP7vSN8tEDXO4RAqwYkfETPmzN5LE">Protective Gear for Protestors</a>
+        <br>
+
         </div>
-        <!-- <img src="img/milktea.jpeg">
-        <p class="caption">Milk tea alliance</p> -->
+        
 
     </main>
 
     <footer>
-        <p>This website's title is credited to this artwork - <a target="_blank" href="https://google.com">Gracecloud!</a> &copy; laphetyay</p>
+        <p>&copy; laphetyaylinks</p>
     </footer>
 
     </body>
