--- a/learn.html
+++ b/learn.html
@@ -12,7 +12,7 @@
     <body>
     <!-- header element -->
     <header>
-        <img src="img/milk-tea-yellow.png" class="center">
+        <img src="img/new-milk-tea.png" class="center">
         <h1>Links</h1>
         <!--<h1>Resources 4 Spring Revolution</h1> -->
     </header>
@@ -20,7 +20,7 @@
     <nav>
     <div class="scrollmenu">
         <a class= "inactiveLink" href="index.html">home</a>
-        <a class= "activeLink" href="learn.html">learn</a>
+        <a class= "activeLink" href="learn.html">news</a>
         <a class= "inactiveLink" href="action.html">take action</a>
         <a class= "inactiveLink" href="donate.html">donate</a>
         <a class= "inactiveLink" href="art-commissions.html">art commissions</a>
@@ -54,7 +54,7 @@
     </main>
 
     <footer>
-        <p>This website's title is credited to this artwork - <a target="_blank" href="https://google.com">Gracecloud!</a> &copy; laphetyay</p>
+        <p>&copy; laphetyaylinks</p>
     </footer>
 
     </body>
