--- a/protest.html
+++ b/protest.html
@@ -3,7 +3,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <head> 
         <title>Laphetyay Links</title>
-        <link rel="icon" href="img/milk-tea-yellow.png">
+        <link rel="icon" href="img/new-milk-tea.png">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda&family=Fraunces:wght@600&family=Poppins:wght@200&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Bubblegum+Sans&display=swap" rel="stylesheet">
@@ -12,7 +12,7 @@
     <body>
     <!-- header element -->
     <header>
-        <img src="img/milk-tea-yellow.png" class="center">
+        <img src="img/new-milk-tea.png" class="center">
         <h1>Links</h1>
         <!--<h1>Resources 4 Spring Revolution</h1> -->
     </header>
@@ -20,7 +20,7 @@
     <nav>
     <div class="scrollmenu">
         <a class= "inactiveLink" href="index.html">home</a>
-        <a class= "inactiveLink" href="learn.html">learn</a>
+         <!--<a class= "inactiveLink" href="learn.html">news</a>-->
         <a class= "inactiveLink" href="action.html">take action</a>
         <a class= "inactiveLink" href="donate.html">donate</a>
         <a class= "inactiveLink" href="art-commissions.html">art commissions</a>
@@ -32,21 +32,24 @@
     <!-- main element -->
     <main>
         <!--<img src="img/donate.png">-->
-        <h2>Petitions</h2>
+        <h2>Safety & Self-Defense</h2><br>
         <div id="centered">
-        <a target="_blank" href="https://donate.crphmyanmar.org/">CRPH's Official CDM Donation Page</a>
+        <a target="_blank" href="https://www.instagram.com/p/CM9BAzgFwuQ/">Managing Grenade Explosion</a>
         <br>
-        <a target="_blank" href="https://www.gofundme.com/f/support-civil-disobedience-movement-in-myanmar?utm_medium=copy_link&utm_source=customer&utm_campaign=p_lico+share-sheet">Myanmar Student Union's CDM GoFundMe </a>
+        <a target="_blank" href="https://www.facebook.com/htpaing/posts/4111194788925681">First Aid Videos</a>
         <br>
-        <a target="_blank" href="https://www.gm4md.org/">Global Movement 4 Democracy</a>
+        <a target="_blank" href="https://www.instagram.com/p/CM2RQGklTAZ/">Download First Aid - IFRC app</a>
+        <br>
+        <a target="_blank" href="https://www.facebook.com/yangonthumichelle/posts/280147563468783">How to Avoid Snipers</a>
+        <br>
+        <a target="_blank" href="https://www.facebook.com/yangonthumichelle/posts/281375663345973">Protection from Tear Gas Bomb</a>
+        <br>
+        <a target="_blank" href="https://www.facebook.com/yangonthumichelle/posts/281330446683828">Making a Smoke Grenade</a>
+        <br>
+        <a target="_blank" href="https://www.instagram.com/p/CMyWcBblRgi/">Guide to Packing Emergency Bag</a>
 
-        <h2>Support Independent News and Vital Journalism</h2>
-        <p>Journalists and independent media in Burma are among those who have been targeted by the illegal military terrorist regime. Contributions will help them to continue reporting on-the-ground stories.</p>
-        <a target="_blank" href="https://myanmar-now.org/en/donate">Support Myanmar Now</a>
-        <br>
-        <a target="_blank" href="https://burma.irrawaddy.com/donate">Support Irrawaddy News</a>
-        <br>
-        <a target="_blank" href="https://www.gm4md.org/">Global Movement 4 Democracy</a>
+
+
         </div>
         <!-- <img src="img/milktea.jpeg">
         <p class="caption">Milk tea alliance</p> -->
@@ -54,7 +57,7 @@
     </main>
 
     <footer>
-        <p>This website's title is credited to this artwork - <a target="_blank" href="https://google.com">Gracecloud!</a> &copy; laphetyay</p>
+        <p>&copy; laphetyaylinks</p>
     </footer>
 
     </body>
