Added more donation, campaign links, changed home page quotes,

--- a/donate.html
+++ b/donate.html
@@ -38,13 +38,13 @@
         <br>
         <a target="_blank" href="https://www.instagram.com/p/CMUHFm7hakp/">How Much Money Is Needed to Sustain CDM?</a>
         <p>International payment</p>
-        <p><a target="_blank" href="https://donate.crphmyanmar.org/">CRPH's Official CDM Donation Page</a> - This is the most reliable/official and most important place to donate to. CRPH, the legitimate government of Burma, needs funding for supporting CDM workers and for building a federal army for the people. These two mechanisms, along with international pressure, are our most vital means of winning this revolution.</p>
+        <p><a target="_blank" href="https://donate.crphmyanmar.org/">CRPH's Official CDM Donation Page</a> - This is the most reliable/official and most important place to donate to. CRPH, the legitimate government of Burma, needs funding for supporting CDM workers(civil servants who are refusing to work under this dictatorshp), and for building a federal army for the people. These two mechanisms, along with international pressure, are our most vital means of winning this revolution.</p>
         <br>
         <a target="_blank" href="https://www.gofundme.com/f/support-civil-disobedience-movement-in-myanmar?utm_medium=copy_link&utm_source=customer&utm_campaign=p_lico+share-sheet">Myanmar Student Union's CDM GoFundMe </a>
         <br>
         <a target="_blank" href="https://www.mutualaidmyanmar.org/cdm-fund">Donate via Mutual Aid Myanmar</a>
         <br>
-        <a target="_blank" href="https://www.gofundme.com/f/help-myanmar-fight-for-democracy?utm_campaign=p_cp+share-sheet&utm_medium=copy_link_all&utm_source=customer">Fundraiser by</a><a target="_blank" href="https://www.instagram.com/p/CMTikSPl4FQ/">Listen Up Myanmar X The NU Class of Alpha Kappa Psi at Northeastern University</a>
+        <a target="_blank" href="https://www.gofundme.com/f/help-myanmar-fight-for-democracy?utm_campaign=p_cp+share-sheet&utm_medium=copy_link_all&utm_source=customer">Fundraiser by</a><a target="_blank" href="https://www.instagram.com/p/CMTikSPl4FQ/"> Listen Up Myanmar X The NU Class of Alpha Kappa Psi at Northeastern University</a>
 
         
 
@@ -64,11 +64,14 @@
         <br>
         <a target="_blank" href="https://actionnetwork.org/fundraising/emergency-challenge-fund-for-a-new-myanmar">International Campaign for the Rohingya</a>
         <br>
+        <a target="_blank" href="https://www.nwayooheroes.org/?fbclid=IwAR0tRLul-ETZhNI1m118fbDU5n8V_QpjzKJ24v2vAQPVxLCK1mmqLiQ71VI">Support Families of Fallen Heroes</a>
+        <br>
         <a target="_blank" href="https://www.facebook.com/groups/yangonconnection/permalink/1849367731877694/">Support IDPs & Orphanages</a>
         <br>
         <a target="_blank" href="https://www.gofundme.com/f/buy-protective-gear-for-protestors-in-myanmar?utm_source=facebook&utm_medium=social&utm_campaign=p_cp%20share-sheet&fbclid=IwAR0MaoE0maLkGeDY9qA637Ad5USwxLyP7vSN8tEDXO4RAqwYkfETPmzN5LE">Protective Gear for Protestors</a>
         <br>
-
+        <a target="_blank" href="https://www.instagram.com/ontheground_mutualaid/">On The Ground Mutual Aid</a>
+        <br>
         </div>
         
 
