--- a/index.html
+++ b/index.html
@@ -146,7 +146,6 @@
         For we've only just begun.<br>
         </p>-->
         <p>Credits <a target="_blank" href="https://www.instagram.com/p/CK2TvL-HQ5-/">here</a>.</p>
-        </div>
         <!-- <img src="img/milktea.jpeg">
         <p class="caption">Milk tea alliance</p> -->
 
@@ -164,10 +163,13 @@
         </div>
         -->
         <br>
-        <br>
 
         <!--Quote-->
-        <h1><div id="quote">Support the fight for democracy in Burma now</div></h1>
+        <h1>"Cool Kids Drink Milk Tea & End Dictatorship"</h1>
+        <p>-<a target="_blank" href="https://www.instagram.com/p/CLw0e-8FWLO/">Credit</a></p>
+        <p>Support the fight for democracy in Burma now</p>
+        <p>-----------------------------</p>
+        </div>
     </main>
 
     <!-- Footer element -->
