--- a/resources.html
+++ b/resources.html
@@ -39,7 +39,9 @@
         <br>
         <a target="_blank" href="https://datastudio.google.com/u/0/reporting/9dd29405-3992-44a9-a025-1abff2a60b99/page/MrD4B">Myanmar Spring Revolution Fallen Stars Database</a>
         <br>
-        <a target="_blank" href="https://twitter.com/aapp_burma">Assistance Association for Political Prisoners(Burma) - Daily Updates on Arrests & Fatalities</a>
+        <a target="_blank" href="https://aappb.org/">Assistance Association for Political Prisoners(Burma) - Daily Briefings</a>
+        <br>
+        <a target="_blank" href="https://www.ophanoihannah.com/?fbclid=IwAR15hpt7ivoujL16lGEIRo-lV631_N4KxWSNRebcXeE5MFVhAXSikWVuS-w">Operation Hanoi Hannah</a>
         <br>
         <a target="_blank" href="https://www.facebook.com/myanmarcouptranslatednews/">Myanmar Coup - Translated News</a>
         <br>
