Add Google Analytics code, changed quotes in home page

--- a/index.html
+++ b/index.html
@@ -1,7 +1,16 @@
 <!DOCTYPE html>
 <html>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<head> 
+<head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZCMDMHB0TR"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-ZCMDMHB0TR');
+</script>
     <title>Laphet Yay Links</title>
     <link rel="icon" href="img/new-milk-tea.png">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -68,10 +77,10 @@
         <br>
 
         <!--Quote-->
-        <h1>"Cool Kids Drink Milk Tea & End Dictatorship"</h1>
+        <!--<h1>"Cool Kids Drink Milk Tea & End Dictatorship"</h1>
         <p>-<a target="_blank" href="https://www.instagram.com/p/CLw0e-8FWLO/">Credit</a></p>
-        <p>Support the fight for democracy in Burma now</p>
-        <p>-----------------------------</p>
+        <p>-----------------------------</p>-->
+        <h1>Support the fight for democracy in Burma now</h1>
         </div>
     </main>
 
