--- a/protest.html
+++ b/protest.html
@@ -2,6 +2,15 @@
 <html>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <head> 
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZCMDMHB0TR"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-ZCMDMHB0TR');
+</script>
         <title>Laphetyay Links</title>
         <link rel="icon" href="img/new-milk-tea.png">
         <link rel="preconnect" href="https://fonts.gstatic.com">
