Changed line about federal army in CRPH donation

--- a/donate.html
+++ b/donate.html
@@ -47,7 +47,7 @@
         <br>
         <a target="_blank" href="https://www.instagram.com/p/CMUHFm7hakp/">How Much Money Is Needed to Sustain CDM?</a>
         <p>International payment</p>
-        <p><a target="_blank" href="https://donate.crphmyanmar.org/">CRPH's Official CDM Donation Page</a> - This is the most reliable/official and most important place to donate to. CRPH, the legitimate government of Burma, needs funding for supporting CDM workers(civil servants who are refusing to work under this dictatorshp), and for building a federal army for the people. These two mechanisms, along with international pressure, are our most vital means of winning this revolution.</p>
+        <p><a target="_blank" href="https://donate.crphmyanmar.org/">CRPH's Official CDM Donation Page</a> - This is the most reliable/official and most important place to donate to. CRPH, the legitimate government of Burma, needs funding for supporting CDM workers(civil servants who are refusing to work under this dictatorshp) by securing their financial and physical security. This mechanism, along with international pressure and building a federal army, are our most vital means of winning this revolution.</p>
         <br>
         <a target="_blank" href="https://www.gofundme.com/f/support-civil-disobedience-movement-in-myanmar?utm_medium=copy_link&utm_source=customer&utm_campaign=p_lico+share-sheet">Myanmar Student Union's CDM GoFundMe </a>
         <br>
