Added new donation and safety links

--- a/donate.html
+++ b/donate.html
@@ -72,6 +72,10 @@
         <br>
         <a target="_blank" href="https://actionnetwork.org/fundraising/emergency-challenge-fund-for-a-new-myanmar">International Campaign for the Rohingya</a>
         <br>
+        <a target="_blank" href="https://chuffed.org/project/support-myanmar-idps-seeking-refuge-from-military-junta?fbclid=IwAR2M6hPh58HJ1F0MSjXZx18eCFxw5SqOEaCdXCLotWvRNnXwRSgJ99YGF6Y">Support Myanmar Political IDPs Fleeing from Prosecution</a>
+        <br>
+        <a target="_blank" href="https://www.facebook.com/projectwin.pjw/posts/294600195358911">Organizations Supporting Displaced Ethnic Populations</a>
+        <br>
         <a target="_blank" href="https://www.nwayooheroes.org/?fbclid=IwAR0tRLul-ETZhNI1m118fbDU5n8V_QpjzKJ24v2vAQPVxLCK1mmqLiQ71VI">Support Families of Fallen Heroes</a>
         <br>
         <a target="_blank" href="https://www.facebook.com/groups/yangonconnection/permalink/1849367731877694/">Support IDPs & Orphanages</a>
