--- a/protest.html
+++ b/protest.html
@@ -45,6 +45,8 @@
         <div id="centered">
         <a target="_blank" href="https://www.instagram.com/p/CM9BAzgFwuQ/">Managing Grenade Explosion</a>
         <br>
+        <a target="_blank" href="https://www.instagram.com/p/CNAqYTlpMPW/">How to Treat Gunshot Wounds</a>
+        <br>
         <a target="_blank" href="https://www.facebook.com/htpaing/posts/4111194788925681">First Aid Videos</a>
         <br>
         <a target="_blank" href="https://www.instagram.com/p/CM2RQGklTAZ/">Download First Aid - IFRC app</a>
