--- a/donate.html
+++ b/donate.html
@@ -64,7 +64,6 @@
         <a target="_blank" href="https://myanmar-now.org/en/donate">Support Myanmar Now</a>
         <br>
         <a target="_blank" href="https://burma.irrawaddy.com/donate">Support Irrawaddy News</a>
-        <br>
 
         <h2>More Aid</h2>
         <p><a target="_blank" href="https://www.gm4md.org/fundraisers/">Global Movement 4 Democracy: Fundraisers</a> - Check out their comprehensive list!</p>
@@ -83,7 +82,10 @@
         <a target="_blank" href="https://www.gofundme.com/f/buy-protective-gear-for-protestors-in-myanmar?utm_source=facebook&utm_medium=social&utm_campaign=p_cp%20share-sheet&fbclid=IwAR0MaoE0maLkGeDY9qA637Ad5USwxLyP7vSN8tEDXO4RAqwYkfETPmzN5LE">Protective Gear for Protestors</a>
         <br>
         <a target="_blank" href="https://www.instagram.com/ontheground_mutualaid/">On The Ground Mutual Aid</a>
-        <br>
+
+
+        <h2>Local</h2>
+        <a target="_blank" href="https://www.instagram.com/p/CNC5yX-lwWm/">Donate Stuffed Toys to Kids in IDP Camps</a>
         </div>
         
 
