New donation links + petition

--- a/action.html
+++ b/action.html
@@ -59,6 +59,8 @@
         <br>
         <a target="_blank" href="https://actionnetwork.org/petitions/urge-the-dail-eireann-to-enact-harsh-actions-on-the-myanmar-military?source=direct_link&">Urge Ireland to take action.</a>
         <br>
+        <a target="_blank" href="https://petition.parliament.uk/petitions/577765">UK, Urge the UN to intervene with a peace keeping force.</a>
+        <br>
         <a target="_blank" href="https://www.gm4md.org/uk">Global Movement 4 Democracy: UK Advocacy</a>
         <br>
         <a target="_blank" href="https://www.gm4md.org/germanyk">Global Movement 4 Democracy: German Advocacy</a>
@@ -85,7 +87,7 @@
 
         
         <h2>Support Garment Workers</h2>
-        <p>Thanks to <a href="https://www.instagram.com/br_randall/">B. Randall</a> for these links!</p>
+        <p>Thanks to <a target="_blank" href="https://www.instagram.com/br_randall/">B. Randall</a> for these links!</p>
         <a target="_blank" href="https://speakupformyanmar.com/">Join the Beyonce/Adidas Campaign!</a>
         <br>
         <a target="_blank" href="https://www.change.org/p/beyonce-dear-beyonce-myanmar-needs-your-voice?signed=true">Beyonce for Myanmar</a>
