--- a/donate.html
+++ b/donate.html
@@ -68,8 +68,8 @@
         <br>
 
         <h2>More Aid</h2>
-        <p><a target="_blank" href="https://www.gm4md.org/fundraisers/">Global Movement 4 Democracy: Fundraisers</a> - Check out their comprehensive list!</p>
-        <a target="_blank" href="https://www.isupportmyanmar.com/">isupportmyanmar - Donation Links</a>
+        <a target="_blank" href="https://www.gm4md.org/fundraisers/">Global Movement 4 Democracy: Fundraisers</a>
+        <a target="_blank" href="https://www.isupportmyanmar.com/">isupportmyanmar</a>
         <br>
         <a target="_blank" href="https://actionnetwork.org/fundraising/emergency-challenge-fund-for-a-new-myanmar">International Campaign for the Rohingya</a>
         <br>
@@ -79,16 +79,24 @@
         <br>
         <a target="_blank" href="https://www.nwayooheroes.org/?fbclid=IwAR0tRLul-ETZhNI1m118fbDU5n8V_QpjzKJ24v2vAQPVxLCK1mmqLiQ71VI">Support Families of Fallen Heroes</a>
         <br>
-        <a target="_blank" href="https://www.facebook.com/groups/yangonconnection/permalink/1849367731877694/">Support IDPs & Orphanages</a>
-        <br>
         <a target="_blank" href="https://www.gofundme.com/f/buy-protective-gear-for-protestors-in-myanmar?utm_source=facebook&utm_medium=social&utm_campaign=p_cp%20share-sheet&fbclid=IwAR0MaoE0maLkGeDY9qA637Ad5USwxLyP7vSN8tEDXO4RAqwYkfETPmzN5LE">Protective Gear for Protestors</a>
         <br>
         <a target="_blank" href="https://www.instagram.com/ontheground_mutualaid/">On The Ground Mutual Aid</a>
+        <br>
+        <p>Thank you <a target="_blank" href="https://www.instagram.com/thethtar_thet/">Thet</a> for these links below!</p>
+        <a target="_blank" href="https://phanfoundation.org/appeal-for-idps/">Phan Foundation - Support Karen</a>
+        <br>
+        <a target="_blank" href="https://www.paypal.com/donate/?cmd=_s-xclick&hosted_button_id=QAJALZFBR6BQU">Karen Women's Organization - Support Karen Affected by Airstrikes</a>
+        <br>
+        <a target="_blank" href="https://donate.restlessbeings.org/appeals/rohingya-fire-march-2021">Support Rohingya affected by fires.</a>
         <br>
 
 
         <h2>Local</h2><br>
         <a target="_blank" href="https://www.instagram.com/p/CNC5yX-lwWm/">Donate Stuffed Toys to Kids in IDP Camps</a>
+        <br>
+        <a target="_blank" href="https://www.facebook.com/groups/yangonconnection/permalink/1849367731877694/">Support IDPs & Orphanages</a>
+        <br>
         </div>
         
 
