--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 <body>
 
-
+<!--burmese translation?-->
     <!-- header element -->
     <header>
         <img src="img/new-milk-tea.png" class="center">
