--- a/protest.html
+++ b/protest.html
@@ -59,9 +59,13 @@
         <br>
         <a target="_blank" href="https://www.instagram.com/p/CMyWcBblRgi/">Guide to Packing Emergency Bag</a>
         <br>
+        <a target="_blank" href="https://drive.google.com/file/d/19h0At3o7ma-XHt_f5m6Rw6Vu9MljO_FF/view?fbclid=IwAR3p1O9p_b0gr9q8IXYUw4LxLoRIEE_d3sVZ65tjKV_wqNU6TY1fKBqA-xc">Skills for Humanity - Safety Guide</a>
+        <br>
 
          <!-- Mental Health Resources -->
         <h2>Mental Health Resources</h2><br>
+        <a target="_blank" href="https://www.instagram.com/myanmed.mm/">Myanmed.mm</a>
+        <br>
         <a target="_blank" href="https://www.instagram.com/p/CMY0Yi5FeV3/">Resources from Listen Up Myanmar</a>
         <br>
         <a target="_blank" href="https://www.instagram.com/little_teas_supportgroup_mm/">Little Teas Support Group</a>
