--- a/donate.html
+++ b/donate.html
@@ -88,7 +88,7 @@
         <br>
         <a target="_blank" href="https://www.paypal.com/donate/?cmd=_s-xclick&hosted_button_id=QAJALZFBR6BQU">Karen Women's Organization - Support Karen Affected by Airstrikes</a>
         <br>
-        <a target="_blank" href="https://donate.restlessbeings.org/appeals/rohingya-fire-march-2021">Support Rohingya affected by fires.</a>
+        <a target="_blank" href="https://donate.restlessbeings.org/appeals/rohingya-fire-march-2021">Support Rohingya Affected by Fires.</a>
         <br>
 
 
